--- a/list-group/src/list-group.css
+++ b/list-group/src/list-group.css
@@ -1,8 +1,9 @@
-/* .list-group {
+.list-group {
   --bs-list-group-color: var(--bs-body-color);
   --bs-list-group-bg: var(--bs-body-bg);
   --bs-list-group-border-color: var(--bs-border-color);
-  --bs-list-group-border-width: var(--bs-border-width);
+  /* --bs-list-group-border-width: var(--bs-border-width); */
+  --bs-list-group-border-width: 1px;
   --bs-list-group-border-radius: var(--bs-border-radius);
   --bs-list-group-item-padding-x: 1rem;
   --bs-list-group-item-padding-y: 0.5rem;
@@ -20,10 +21,10 @@
   flex-direction: column;
   padding-left: 0;
   margin-bottom: 0;
-  border-radius: var(--bs-list-group-border-radius);
+  /* border-radius: var(--bs-list-group-border-radius); */
 }
 
-.list-group-numbered {
+/* .list-group-numbered {
   list-style-type: none;
   counter-reset: section;
 }
@@ -47,7 +48,7 @@
 .list-group-item-action:active {
   color: var(--bs-list-group-action-active-color);
   background-color: var(--bs-list-group-action-active-bg);
-}
+}*/
 
 .list-group-item {
   position: relative;
@@ -57,8 +58,9 @@
   color: var(--bs-list-group-color);
   text-decoration: none;
   background-color: var(--bs-list-group-bg);
-  border: var(--bs-list-group-border-width) solid
-    var(--bs-list-group-border-color);
+  /* border: var(--bs-list-group-border-width) solid
+    var(--bs-list-group-border-color); */
+  border: 1px solid rgba(0, 0, 0, 0.125);
 }
 .list-group-item:first-child {
   border-top-left-radius: inherit;
@@ -343,4 +345,4 @@
   --bs-list-group-active-color: var(--bs-dark-bg-subtle);
   --bs-list-group-active-bg: var(--bs-dark-text-emphasis);
   --bs-list-group-active-border-color: var(--bs-dark-text-emphasis);
-} */
+}
