--- a/dropdown/src/form-select.css
+++ b/dropdown/src/form-select.css
@@ -25,6 +25,55 @@
 }
 
 .dropdown-menu {
+  --adr-dropdown-zindex: 1000;
+  --adr-dropdown-min-width: 10rem;
+  --adr-dropdown-padding-x: 0;
+  --adr-dropdown-padding-y: 0.5rem;
+  --adr-dropdown-spacer: 0.125rem;
+  --adr-dropdown-font-size: 1rem;
+  --adr-dropdown-color: var(--figma-color-text-normal);
+  --adr-dropdown-bg: var(--figma-color-background-base-light);
+  --adr-dropdown-border-color: var(--adr-border-color-translucent);
+  --adr-dropdown-border-radius: var(--figma-size-radius-small);
+  --adr-dropdown-border-width: var(--adr-border-width);
+  --adr-dropdown-inner-border-radius: calc(
+    var(--adr-border-radius) - var(--adr-border-width)
+  );
+  --adr-dropdown-divider-bg: var(--adr-border-color-translucent);
+  --adr-dropdown-divider-margin-y: 0.5rem;
+  --adr-dropdown-box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.15);
+  --adr-dropdown-link-color: var(--figma-color-text-normal);
+  --adr-dropdown-link-hover-color: var(--figma-color-text-normal);
+  /* --adr-dropdown-link-hover-bg: var(--adr-tertiary-bg); */
+  --adr-dropdown-link-hover-bg: var(--figma-color-background-base-grey);
+  --adr-dropdown-link-active-color: #fff;
+  --adr-dropdown-link-active-bg: #0d6efd;
+  --adr-dropdown-link-disabled-color: var(--adr-tertiary-color);
+  /* --adr-dropdown-item-padding-x: 1rem;
+  --adr-dropdown-item-padding-y: 0.25rem; */
+  --adr-dropdown-item-padding-x: 0.625rem;
+  --adr-dropdown-item-padding-y: 0.625rem;
+  --adr-dropdown-header-color: #6c757d;
+  --adr-dropdown-header-padding-x: 1rem;
+  --adr-dropdown-header-padding-y: 0.5rem;
+  position: absolute;
+  z-index: var(--adr-dropdown-zindex);
+  display: none;
+  min-width: var(--adr-dropdown-min-width);
+  padding: var(--adr-dropdown-padding-y) var(--adr-dropdown-padding-x);
+  margin: 0;
+  font-size: var(--adr-dropdown-font-size);
+  color: var(--adr-dropdown-color);
+  text-align: left;
+  list-style: none;
+  background-color: var(--adr-dropdown-bg);
+  background-clip: padding-box;
+  /* border: var(--adr-dropdown-border-width) solid
+    var(--adr-dropdown-border-color); */
+  border-radius: var(--adr-dropdown-border-radius);
+  box-shadow: 0px 2px 4px -2px rgba(16, 24, 40, 0.06),
+    0px 4px 8px -2px rgba(16, 24, 40, 0.1);
+
   /* --bs-dropdown-zindex: 1000;
   --bs-dropdown-min-width: 10rem;
   --bs-dropdown-padding-x: 0;
@@ -51,9 +100,9 @@
   --bs-dropdown-header-color: #6c757d;
   --bs-dropdown-header-padding-x: 1rem;
   --bs-dropdown-header-padding-y: 0.5rem; */
-  position: absolute;
+  /* position: absolute; */
   /* z-index: var(--bs-dropdown-zindex); */
-  display: none;
+  /* display: none; */
   /* min-width: var(--bs-dropdown-min-width);
   padding: var(--bs-dropdown-padding-y) var(--bs-dropdown-padding-x);
   margin: 0;
@@ -244,16 +293,31 @@
   vertical-align: 0;
 } */
 
-/* .dropdown-divider {
+.dropdown-divider {
   height: 0;
-  margin: var(--bs-dropdown-divider-margin-y) 0;
+  /* margin: var(--bs-dropdown-divider-margin-y) 0; */
+  margin: 0.5rem 0;
   overflow: hidden;
-  border-top: 1px solid var(--bs-dropdown-divider-bg);
+  /* border-top: 1px solid var(--bs-dropdown-divider-bg); */
+  border-top: 1px solid #e9ecef;
   opacity: 1;
-} */
+}
 
-/* .dropdown-item {
+.dropdown-item {
   display: block;
+  width: 100%;
+  padding: var(--adr-dropdown-item-padding-y) var(--adr-dropdown-item-padding-x);
+  clear: both;
+  font-weight: 400;
+  color: var(--adr-dropdown-link-color);
+  text-align: inherit;
+  text-decoration: none;
+  white-space: nowrap;
+  background-color: transparent;
+  border: 0;
+  border-radius: var(--adr-dropdown-item-border-radius, 0);
+
+  /* display: block;
   width: 100%;
   padding: var(--bs-dropdown-item-padding-y) var(--bs-dropdown-item-padding-x);
   clear: both;
@@ -264,35 +328,51 @@
   white-space: nowrap;
   background-color: transparent;
   border: 0;
-  border-radius: var(--bs-dropdown-item-border-radius, 0);
+  border-radius: var(--bs-dropdown-item-border-radius, 0); */
 }
-.dropdown-item:hover, .dropdown-item:focus {
-  color: var(--bs-dropdown-link-hover-color);
-  background-color: var(--bs-dropdown-link-hover-bg);
+.dropdown-item:hover,
+.dropdown-item:focus {
+  /* color: var(--bs-dropdown-link-hover-color);
+  background-color: var(--bs-dropdown-link-hover-bg); */
+
+  color: var(--adr-dropdown-link-hover-color);
+  background-color: var(--adr-dropdown-link-hover-bg);
 }
-.dropdown-item.active, .dropdown-item:active {
-  color: var(--bs-dropdown-link-active-color);
+.dropdown-item.active,
+.dropdown-item:active {
+  /* color: var(--bs-dropdown-link-active-color);
   text-decoration: none;
-  background-color: var(--bs-dropdown-link-active-bg);
+  background-color: var(--bs-dropdown-link-active-bg); */
+
+  color: #fff;
+  text-decoration: none;
+  background-color: #007bff;
 }
-.dropdown-item.disabled, .dropdown-item:disabled {
-  color: var(--bs-dropdown-link-disabled-color);
+.dropdown-item.disabled,
+.dropdown-item:disabled {
+  /* color: var(--bs-dropdown-link-disabled-color);
+  pointer-events: none;
+  background-color: transparent; */
+
+  color: #adb5bd;
   pointer-events: none;
   background-color: transparent;
-} */
+}
 
-/* .dropdown-menu.show {
+.dropdown-menu.show {
   display: block;
-} */
+}
 
-/* .dropdown-header {
+.dropdown-header {
   display: block;
-  padding: var(--bs-dropdown-header-padding-y) var(--bs-dropdown-header-padding-x);
+  padding: var(--adr-dropdown-item-padding-y) var(--adr-dropdown-item-padding-x);
+  /* padding: var(--bs-dropdown-header-padding-y) var(--bs-dropdown-header-padding-x); */
   margin-bottom: 0;
   font-size: 0.875rem;
-  color: var(--bs-dropdown-header-color);
+  color: #6c757d;
+  /* color: var(--bs-dropdown-header-color); */
   white-space: nowrap;
-} */
+}
 
 /* .dropdown-item-text {
   display: block;
@@ -326,6 +406,14 @@
 }
 .dropstart .dropdown-toggle-split::before {
   margin-right: 0;
+}
+
+.dropleft .dropdown-menu {
+  top: 0;
+  right: 100%;
+  left: auto;
+  margin-top: 0;
+  margin-right: 0.125rem;
 }
 
 .form-select {
