--- a/dropdown/src/form-select.css
+++ b/dropdown/src/form-select.css
@@ -439,7 +439,7 @@
 .form-select:focus {
   outline: none;
   border: 2px solid var(--figma-color-background-primary);
-  box-shadow: 0 0 10px var(var(--figma-color-background-primary));
+  box-shadow: 0 0 10px var(--figma-color-background-primary);
 }
 
 /* SIZING */
@@ -457,4 +457,30 @@
 /* DISABLED */
 .form-select:disabled {
   background-color: var(--figma-color-background-disable);
+}
+
+select.form-control-sm:not([size]):not([multiple]),
+.input-group-sm > select.form-control:not([size]):not([multiple]),
+.input-group-sm
+  > .input-group-prepend
+  > select.input-group-text:not([size]):not([multiple]),
+.input-group-sm
+  > .input-group-append
+  > select.input-group-text:not([size]):not([multiple]),
+.input-group-sm > .input-group-prepend > select.btn:not([size]):not([multiple]),
+.input-group-sm > .input-group-append > select.btn:not([size]):not([multiple]) {
+  height: calc(1.8125rem + 2px);
+}
+
+select.form-control-lg:not([size]):not([multiple]),
+.input-group-lg > select.form-control:not([size]):not([multiple]),
+.input-group-lg
+  > .input-group-prepend
+  > select.input-group-text:not([size]):not([multiple]),
+.input-group-lg
+  > .input-group-append
+  > select.input-group-text:not([size]):not([multiple]),
+.input-group-lg > .input-group-prepend > select.btn:not([size]):not([multiple]),
+.input-group-lg > .input-group-append > select.btn:not([size]):not([multiple]) {
+  height: calc(2.875rem + 2px);
 }
