--- a/typography/src/typo.css
+++ b/typography/src/typo.css
@@ -276,6 +276,8 @@ label {
   word-spacing: var(--figma-font-label-paragraph-spacing);
   text-transform: var(--figma-font-label-text-case);
   text-decoration: var(--figma-font-label-text-decoration);
+
+  margin-bottom: 0.13rem;
 }
 .caption {
   font-family: var(--figma-font-caption-font-family);
