--- a/field/src/form.css
+++ b/field/src/form.css
@@ -175,7 +175,7 @@
     0px 1px 3px 0px rgba(16, 24, 40, 0.1); */
 }
 
-.form-control:focus {
+.us {
   outline: none;
   border: 2px solid var(--figma-color-background-primary);
   box-shadow: 0 0 10px var(--figma-color-background-primary);
@@ -189,13 +189,6 @@
   cursor: pointer;
 }
 
-.form-control:focus {
-  color: var(--bs-body-color);
-  background-color: var(--bs-body-bg);
-  border-color: #86b7fe;
-  outline: 0;
-  box-shadow: 0 0 0 0.25rem rgba(13, 110, 253, 0.25);
-}
 .form-control::-webkit-date-and-time-value {
   min-width: 85px;
   height: 1.5em;
