--- a/field/src/form.css
+++ b/field/src/form.css
@@ -168,11 +168,11 @@
   /* color: var(--bs-body-color); */
   /* background-color: var(--bs-body-bg); */
   /* border-color: #86b7fe; */
-  /* border-color: var(--figma-color-background-primary); */
+  border-color: var(--figma-color-background-primary);
   /* outline: 0; */
   /* box-shadow: 0 0 0 0.25rem rgba(13, 110, 253, 0.25); */
-  /* box-shadow: 0px 0px 4px 0px rgba(255, 221, 0, 0.4),
-    0px 1px 3px 0px rgba(16, 24, 40, 0.1); */
+  box-shadow: 0px 0px 4px 0px rgba(255, 221, 0, 0.4),
+    0px 1px 3px 0px rgba(16, 24, 40, 0.1);
 }
 
 .us {
