chore: style-dictionary output

--- a/tokens/scss/_variables.scss
+++ b/tokens/scss/_variables.scss
@@ -1,6 +1,6 @@
 
 // Do not edit directly
-// Generated on Fri, 27 Oct 2023 08:01:28 GMT
+// Generated on Fri, 27 Oct 2023 08:12:17 GMT
 
 $font-h1-font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Inter, Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol';
 $font-h1-font-weight: 600;
@@ -217,7 +217,7 @@ $color-text-error: #f04438;
 $color-text-link: #2e90fa;
 $color-text-button-primary: #344054;
 $color-text-button-secondary: #175cd3;
-$color-text-test: #522fcc;
+$color-text-test: #02e816;
 $color-background-primary: #ffdd00;
 $color-background-primary-container: #ffeb74;
 $color-background-base-light: #fcfcfd;
