--- a/tokens/src/styles.css
+++ b/tokens/src/styles.css
@@ -5,6 +5,7 @@
 @import '../../cards/src/cards.css';
 @import '../../breadcrumb/src/breadcrumb.css';
 @import '../../button/src/button.css';
+@import '../../borders/src/borders.css';
 @import '../../typography/src/typo.css';
 @import '../../field/src/form.css';
 @import '../../footer/src/footer.css';
