fix: color tooltip

--- a/tooltip/src/tooltip.css
+++ b/tooltip/src/tooltip.css
@@ -56,7 +56,8 @@
 .bs-tooltip-auto[x-placement^='top'] .arrow::before {
   top: 0;
   border-width: 0.4rem 0.4rem 0;
-  border-top-color: #000;
+  /* border-left-color: #000; */
+  border-left-color: #fff;
 }
 
 .bs-tooltip-right,
@@ -75,7 +76,8 @@
 .bs-tooltip-auto[x-placement^='right'] .arrow::before {
   right: 0;
   border-width: 0.4rem 0.4rem 0.4rem 0;
-  border-right-color: #000;
+  /* border-left-color: #000; */
+  border-left-color: #fff;
 }
 
 .bs-tooltip-bottom,
@@ -92,7 +94,8 @@
 .bs-tooltip-auto[x-placement^='bottom'] .arrow::before {
   bottom: 0;
   border-width: 0 0.4rem 0.4rem;
-  border-bottom-color: #000;
+  /* border-left-color: #000; */
+  border-left-color: #fff;
 }
 
 .bs-tooltip-left,
@@ -111,16 +114,23 @@
 .bs-tooltip-auto[x-placement^='left'] .arrow::before {
   left: 0;
   border-width: 0.4rem 0 0.4rem 0.4rem;
-  border-left-color: #000;
+  /* border-left-color: #000; */
+  border-left-color: #fff;
 }
 
 .tooltip-inner {
   max-width: 200px;
   padding: 0.25rem 0.5rem;
-  color: #fff;
+  /* color: #fff; */
+  color: var(--figma-color-text-normal);
   text-align: center;
-  background-color: #000;
-  border-radius: 0.25rem;
+  /* background-color: #000; */
+  background-color: #fff;
+  /* border-radius: 0.25rem; */
+
+  border-radius: 8px;
+  box-shadow: 0px 4px 8px -2px rgba(16, 24, 40, 0.1),
+    0px 2px 4px -2px rgba(16, 24, 40, 0.06);
 }
 
 /* .tooltip {
