--- a/tokens/src/styles.css
+++ b/tokens/src/styles.css
@@ -7,7 +7,7 @@
 @import '../../button/src/button.css';
 @import '../../borders/src/borders.css';
 @import '../../typography/src/typo.css';
-@import '../../field/src/form.css';
+@import '../../form/src/form.css';
 @import '../../footer/src/footer.css';
 @import '../../carousel/src/carousel.css';
 @import '../../pagination/src/pagination.css';
